--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -7,18 +7,13 @@ body {
   background-color: $white;
 }
 
-button,
-input {
-  letter-spacing: inherit;
-}
-
 button {
   cursor: pointer;
 }
 
 .container {
-  max-width: 900px;
-  padding: 0 15px;
+  max-width: 960px;
+  padding: 0 30px;
   margin: 0 auto;
 }
 
@@ -33,4 +28,56 @@ button {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.subtitle {
+  display: inline-block;
+  font-family: "Ubuntu";
+  font-weight: 300;
+  color: $subtitle;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
+}
+
+.title {
+  font-size: 30px;
+  line-height: 1;
+  margin-bottom: 35px;
+
+  @media (max-width: 992px) {
+    font-size: 26px;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 24px;
+  }
+}
+
+.focus {
+  border-radius: 3px;
+  transition: all 0.5s;
+
+  &:focus {
+    outline: 2px solid rgba($color: $accent, $alpha: 0.5);
+  }
+}
+
+.logo {
+  padding: 4px;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
 }
