--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -32,19 +32,22 @@ button {
 
 .subtitle {
   display: inline-block;
-  font-family: "Ubuntu";
+  font-family: "Ubuntu", sans-serif;
   font-weight: 300;
   color: $subtitle;
   text-transform: uppercase;
   margin-bottom: 30px;
 
-  &:hover {
-    text-decoration: underline;
+  &--link {
+    &:hover {
+      text-decoration: underline;
+    }
+
+    &:active {
+      opacity: 0.5;
+    }
   }
 
-  &:active {
-    opacity: 0.5;
-  }
 }
 
 .title {
@@ -79,5 +82,276 @@ button {
 
   &:active {
     opacity: 0.5;
+  }
+}
+
+.header {
+  max-width: 1100px;
+  padding: 0 15px;
+  margin: 0 auto 100px;
+
+  @media (max-width: 992px) {
+    margin: 0 auto 50px;
+  }
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 75px 0;
+
+  @media (max-width: 992px) {
+    padding: 50px 0;
+  }
+
+  &__btn {
+    display: none;
+    position: relative;
+    width: 44px;
+    height: 44px;
+    padding: 7px;
+    z-index: 2;
+
+    &:hover {
+      background-color: $subtitle;
+    }
+
+    &:active {
+      box-shadow: inset 0px 7px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    @media (max-width: 992px) {
+      display: block;
+    }
+  }
+
+  &__btn.active .nav__btn-line {
+    background-color: transparent;
+  }
+
+  &__btn.active .nav__btn-line::before {
+    transform: rotate(-45deg);
+    top: 0;
+  }
+
+  &__btn.active .nav__btn-line::after {
+    transform: rotate(45deg);
+    top: 0;
+  }
+
+  &__btn-line::before {
+    content: '';
+    top: -8px;
+  }
+
+  &__btn-line::after {
+    content: '';
+    top: 8px;
+  }
+
+  &__btn-line,
+  &__btn-line::before,
+  &__btn-line::after {
+    display: block;
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: $basic;
+  }
+
+  &__list {
+    display: flex;
+    width: 55%;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: 992px) {
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      height: 50%;
+      width: 100%;
+      padding-top: 70px;
+      text-align: center;
+      z-index: 1;
+      background-color: $white;
+      transform: translateY(-500%);
+      transition: transform 0.5s;
+    }
+  }
+
+  &__list.active {
+    transform: translateY(0);
+  }
+
+  &__link {
+    text-transform: uppercase;
+
+    &:hover {
+      text-decoration: underline;
+    }
+
+    &:active {
+      opacity: 0.5;
+    }
+
+    @media (max-width: 992px) {
+      display: block;
+      font-size: 18px;
+    }
+  }
+}
+
+.post-card {
+  &__img {
+    width: 100%;
+    object-fit: contain;
+    object-position: center;
+    margin-bottom: 30px;
+  }
+
+  &__link {
+    &:hover {
+      color: $accent;
+    }
+
+    &:active {
+      opacity: 0.5;
+    }
+  }
+
+  &__title {
+    display: -webkit-box;
+    margin-bottom: 5px;
+    min-height: 2.1em;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    &--mini {
+      font-size: 20px;
+    }
+  }
+
+  &__text {
+    display: -webkit-box;
+    min-height: 5.1em;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+.footer {
+  padding: 45px 0;
+  color: $black;
+  background-color: #f0f0f0;
+
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: 576px) {
+      flex-direction: column;
+      align-items: center
+    }
+  }
+
+  &__list {
+    display: flex;
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 18px;
+
+    @media (max-width: 992px) {
+      margin-right: 10px;
+    }
+  }
+
+  &__link {
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    &:active {
+      opacity: 0.5;
+    }
+  }
+}
+
+.social {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+
+  &--share {
+    justify-content: flex-end;
+    margin-bottom: 70px;
+    text-transform: uppercase;
+    color: $subtitle;
+  }
+
+  &__text {
+    margin-right: 20px;
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 18px;
+
+    @media (max-width: 992px) {
+      margin-right: 10px;
+    }
+  }
+
+  &__link {
+    height: 18px;
+    padding: 2px 0;
+    fill: $basic;
+
+    &--share {
+      fill: $subtitle;
+    }
+
+    &--conn {
+      fill: #c8c8c8;
+    }
+
+    &:hover {
+      fill: $accent;
+    }
+
+    &:active {
+      opacity: 0.5;
+    }
+
+    @media (max-width: 992px) {
+      display: block;
+      width: 44px;
+      height: 44px;
+      padding: 7px;
+    }
+  }
+
+  &__icon {
+    @media (max-width: 992px) {
+      width: 30px;
+      height: 30px;
+    }
   }
 }
