--- a/app/scss/post.scss
+++ b/app/scss/post.scss
@@ -20,15 +20,15 @@
   }
 
   &__blockquote {
-    font-style: italic;
     padding: 0 20px;
     margin-bottom: 25px;
+    font-style: italic;
   }
 }
 
 .hints {
-  background-color: #f5f5f5;
   padding: 70px 0;
+  background-color: #f5f5f5;
 
   &__list {
     display: grid;
@@ -70,9 +70,9 @@
     flex-shrink: 0;
     width: 72px;
     height: 72px;
+    margin-right: 35px;
     text-align: center;
     border-radius: 50%;
-    margin-right: 35px;
 
     &--bg {
       background-color: #cae5e0;
@@ -94,8 +94,8 @@
   }
 
   &__author {
-    font-weight: 700;
     margin-bottom: 15px;
+    font-weight: 700;
   }
 
   &__text {
@@ -114,9 +114,9 @@
   &__input {
     width: 100%;
     min-height: 80px;
+    padding: 0 35px;
     border: 1px solid #c8c8c8;
     border-radius: 5px;
-    padding: 0 35px;
 
     &::placeholder {
       font-family: 'Ubuntu', sans-serif;
@@ -127,6 +127,7 @@
 
     @media (max-width: 576px) {
       padding: 0 15px;
+      font-size: 12px;
     }
   }
 }
